components/devfile-sample-go-basic/base/.tekton/build-webhook-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    build.appstudio.openshift.io/application: appstudio
    build.appstudio.openshift.io/build: "true"
    build.appstudio.openshift.io/component: devfile-sample-go-basic
    build.appstudio.openshift.io/type: build
    build.appstudio.openshift.io/version: "0.1"
    pipelines.appstudio.openshift.io/type: build
  creationTimestamp: null
  name: eldevfile-sample-go-basic
  namespace: managed-gbenhaim-app
spec:
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-devfile-sample-go-basic
    weight: null
status: {}
